# romainguy-optimization-pitfalls

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  requirements.txt  the_path_not_taken.cpp  vanilla_v_numpy.py  you_are_going_to_need_it.cpp
